Se vuelve a corregir ruta del output.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KCMSMART| Desarrollo sitios webs, landing pages, tienda online y blogs</title>
-    <link rel="stylesheet" href="/output.css">
+    <link rel="stylesheet" href="./output.css">
     <script src="https://kit.fontawesome.com/8c2f1b82d6.js" crossorigin="anonymous"></script>
 </head>
 <body>
