Se actuliza ruta de script

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
   <footer class="w-full p-4 font-MonserratExtraBold text-md font-extrabold bg-black text-white text-center uppercase lg:text-lg">
     <p>© 2025 KCMSMART. Todos los derechos reservados.</p>
 </footer>
-<script src="/assets/js/script.js"></script>
+<script src="./assets/js/script.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
   AOS.init();
