se agregar meta para el header cambie de color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon">
+    <meta name="theme-color" content="#18F29B" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <style>
       html {
         scroll-behavior: smooth;
