Se comprime imagen

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         Estos son algunos de mis proyectos más destacados.
     </p>
 
-    <div class="w-full flex flex-wrap items-center justify-center gap-5 mt-10">
+    <div class="w-full flex flex-wrap items-center justify-center gap-5 mt-10 ">
 
       <!--Proyecto 1-->
       <article class="w-full h-[231px] border-4 flex flex-row gap-3 lg:w-[540px] shadow-2xl rounded-3xl p-2" data-aos="fade-up">
@@ -469,7 +469,8 @@
                   <div class="flex space-x-4 mt-2">
                     <a href="#" class="w-14 h-14 rounded-full bg-black flex justify-center items-center"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
                     <a href="#" class="w-14 h-14 rounded-full bg-black flex justify-center items-center"><i class="fa-brands fa-tiktok" style="color: #ffffff;"></i></a>
-                    <a href="#" class="w-14 h-14 rounded-full bg-black flex justify-center items-center"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
+                    <a href="https://www.facebook.com/kcmsmart" target="_blank" class="w-14 h-14 rounded-full bg-black flex justify-center items-center"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
+                    <a href="https://github.com/kcmsmartdev" target="_blank" class="w-14 h-14 rounded-full bg-black flex justify-center items-center"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
                   </div>
                 </div>
               </div>
@@ -495,7 +496,7 @@
   </section>
     
   </main>
-  <footer class="w-full p-4 font-MonserratExtraBold text-sm font-extrabold bg-black text-white text-center lg:text-lg">
+  <footer class="w-full p-4 font-MonserratExtraBold text-sm font-extrabold bg-black text-white text-center lg:text-md">
     <p>© 2025 KCMSMART. Todos los derechos reservados.</p>
 </footer>
 <script src="./assets/js/script.js"></script>
