--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 
   <header class="w-full bg-[#18F29B]">
     <nav class="w-full flex justify-between items-center lg:justify-center">
-      <div class="flex justify-between items-center p-5 gap-6 lg:w-[1084px] lg:bg-black lg:justify-evenly py-2 rounded-bl-3xl rounded-br-3xl">
+      <div class="flex justify-between items-center px-5 gap-6 lg:w-[1000px] lg:bg-black lg:justify-evenly py-2 rounded-bl-3xl rounded-br-3xl">
   
         <!-- Logo móvil -->
         <a class="flex lg:hidden" href="/index.html">
-          <img src="./assets/images/logo_negro.png" width="45" alt="logo KCM Smart">
+          <img src="./assets/images/logo_negro.png" width="35px" width="55" alt="logo KCM Smart">
         </a>
   
         <!-- Logo escritorio -->
         <a class="hidden lg:flex" href="/index.html">
-          <img src="./assets/images/logo_blanco.png" width="45" alt="logo KCM Smart">
+          <img src="./assets/images/logo_blanco.png" width="35px" width="55" alt="logo KCM Smart">
         </a>
   
         <!-- Menú navegación -->
-        <ul class="hidden lg:flex gap-12 text-white font-Monserrat-Thin tracking-[2px] text-[0.8em]">
+        <ul class="hidden lg:flex gap-12 text-white/70 font-Monserrat-Thin tracking-[2px] text-[0.8em]">
           <li><a href="#Sobremi" class="hover:underline transition">SOBRE MI</a></li>
           <li><a href="#Servicios" class="hover:underline transition">SERVICIO</a></li>
           <li><a href="#Portafolio" class="hover:underline transition">PORTAFOLIO</a></li>
@@ -55,23 +55,22 @@
           <div class="w-full flex flex-row items-center justify-center text-white text-5xl sm:text-4xl md:text-5xl lg:text-7xl xl:text-9xl mt-10">
             <span id="typed" class="font-Boldonse"></span>
           </div>
-          <h1 class="w-full font-MonserratRegular text-[1em] lg:text-[1.3em] mt-6 text-black/60 text-center p-5 lg:w-[800px]">
-            Hacemos sitios web, landing pages,
-            tienda online con diseños modernos y funcionales.Transformos tus ideas en experiencias web únicas y personalizadas que destacan en el mundo digital.
+          <h1 class="w-full font-MonserratRegular text-[1em] mt-10 lg:text-[1.3em] text-black/50 text-center p-5 lg:w-[800px]">
+            Transformos tus ideas en experiencias web únicas y personalizadas que destacan en el mundo digital.
           </h1>
       
           <!-- Botones -->
           <div class="mt-5 w-full flex flex-col md:flex-row lg:flex-row items-center justify-center gap-6">
             <a href="#Portafolio"
                class="transform transition duration-300 ease-in-out hover:scale-105 border-4 border-black
-                      text-white bg-black hover:bg-white hover:text-black hover:border-white
-                      font-Monserrat text-lg lg:text-2xl px-20 py-4 rounded-full shadow-md text-center">
+                      text-white bg-black hover:bg-white hover:text-black hover:border-white hover:font-MonserratExtraBold tracking-tight
+                      font-MonserratRegular text-lg lg:text-2xl px-20 py-4 rounded-3xl shadow-md text-center">
               Portafolio
             </a>
             <a href="#Contacto"
                class="transform transition duration-300 ease-in-out hover:scale-105
-                      text-white border-4 border-white hover:bg-white hover:text-black 
-                      font-Monserrat text-lg lg:text-2xl px-20 py-4 rounded-full shadow-md text-center">
+                      text-white border-4 border-white hover:bg-white hover:text-black hover:font-MonserratExtraBold tracking-tight
+                      font-MonserratRegular text-lg lg:text-2xl px-20 py-4 rounded-3xl shadow-md text-center">
               Contacto
             </a>
           </div>
