Se corrige imagenes de png a webp

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   
         <!-- Logo móvil -->
         <a class="flex lg:hidden" href="/index.html">
-          <img src="./assets/images/logo_negro.png" width="35px" width="55" alt="logo KCM Smart">
+          <img src="./assets/images/logo_negro.webp" width="35px" width="55" alt="logo KCM Smart">
         </a>
   
         <!-- Logo escritorio -->
         <a class="hidden lg:flex" href="/index.html">
-          <img src="./assets/images/logo_blanco.png" width="35px" width="55" alt="logo KCM Smart">
+          <img src="./assets/images/logo_blanco.webp" width="35px" width="55" alt="logo KCM Smart">
         </a>
   
         <!-- Menú navegación -->
@@ -82,7 +82,7 @@
     <!--Sección de Sobre mi-->
     <section id="Sobremi" class="w-full bg-black flex flex-col-reverse p-5 gap-20 md:lg:px-32 lg:flex-row lg:px-64 lg:py-32  mb-10 lg:mb-0 rounded-bl-3xl rounded-br-3xl">
       <div class="w-full flex justify-center mb-10 lg:mb-5" data-aos="fade-up">
-          <img src="./assets/images/5800.jpg"  alt="sobre mi" class=" rounded-[64px] lg:w-[498px]">
+          <img src="./assets/images/5800.webp"  alt="sobre mi" class=" rounded-[64px] lg:w-[498px]">
 
       </div>
       <div class="w-full flex flex-col text-white text-justify mt-10" data-aos="fade-up">
@@ -249,7 +249,7 @@
       <!--Proyecto 1-->
       <article class="w-full h-[231px] border-4 flex flex-row gap-3 lg:w-[540px] shadow-2xl rounded-3xl p-2" data-aos="fade-up">
         <div class="flex justify-center items-center p-1">
-            <img src="./assets/images/img-peso.png" alt="Portafolio image" class="w-[150px] h-[150px] object-contain">
+            <img src="./assets/images/img-peso.webp" alt="Portafolio image" class="w-[150px] h-[150px] object-contain">
         </div>
         <div class="w-full flex flex-col justify-between items-center text-center p-2 " data-aos="fade-right">
           <span class="font-Boldonse text-[0.8em] lg:text-[0.9em]">Calculadora de Masa Corporal</span>
@@ -267,7 +267,7 @@
       <!--Proyecto 2-->
       <article class="w-full h-[231px] border-4 flex flex-row gap-3 lg:w-[540px] shadow-2xl rounded-3xl p-2" data-aos="fade-up">
         <div class="flex justify-center p-1">
-            <img src="./assets/images/img-viajes.png" alt="Portafolio image" class="w-[150px] h-[150px] object-contain">
+            <img src="./assets/images/img-viajes.webp" alt="Portafolio image" class="w-[150px] h-[150px] object-contain">
         </div>
         <div class="w-full flex flex-col justify-between items-center text-center p-2 ">
           <span class="font-Boldonse text-[0.8em] lg:text-[0.9em]">Blog Viajes</span>
@@ -288,7 +288,7 @@
       <!--Proyecto 3-->
       <article class="w-full h-[231px] border-4 flex flex-row gap-3 lg:w-[540px] shadow-2xl rounded-3xl p-2" data-aos="fade-up">
         <div class="flex justify-center items-center p-1">
-            <img src="./assets/images/img-fotografo.png" class="w-[150px] h-[150px] object-contain" alt="Portafolio image">
+            <img src="./assets/images/img-fotografo.webp" class="w-[150px] h-[150px] object-contain" alt="Portafolio image">
         </div>
         <div class="w-full flex flex-col justify-between items-center text-center p-2 ">
           <span class="font-Boldonse text-[0.8em] lg:text-[0.9em]">Landing Page de Fotógrafo</span>
@@ -308,7 +308,7 @@
       <!--Proyecto 4-->
       <article class="w-full h-[231px] border-4 flex flex-row gap-3 lg:w-[540px] shadow-2xl rounded-3xl p-2" data-aos="fade-up">
         <div class="flex justify-center items-center p-1">
-            <img src="./assets/images/img-redes.png" alt="Portafolio image" class="w-[150px] h-[150px] object-contain">
+            <img src="./assets/images/img-redes.webp" alt="Portafolio image" class="w-[150px] h-[150px] object-contain">
         </div>
         <div class="w-full flex flex-col justify-between items-center text-center p-2 ">
           <span class="font-Boldonse text-[0.8em] lg:text-[0.9em]">E-commerce Follow Tiktok</span>
