--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KCMSMART| Desarrollo sitios webs, landing pages, tienda online y blogs</title>
     <link rel="stylesheet" href="./output.css">
-    <script src="https://kit.fontawesome.com/8c2f1b82d6.js" crossorigin="anonymous"></script>
+    <script rel="preload" src="https://kit.fontawesome.com/8c2f1b82d6.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon">
@@ -22,7 +22,7 @@
 
   <header class="w-full bg-[#c9ffea]">
     <nav class="w-full flex justify-between items-center lg:justify-center">
-      <div class="flex justify-between items-center px-5 gap-6 lg:w-[1000px] lg:bg-gray-800 lg:justify-evenly py-2 rounded-bl-3xl rounded-br-3xl">
+      <div class="flex justify-between items-center p-5 gap-6 lg:w-[1000px] lg:bg-gray-800 lg:justify-evenly rounded-bl-3xl rounded-br-3xl">
   
         <!-- Logo móvil -->
         <a class="flex lg:hidden" href="/index.html">
@@ -70,8 +70,8 @@
             </a>
             <a href="#Contacto"
                class="transform transition duration-300 ease-in-out hover:scale-105
-                      text-white hover:bg-white hover:text-black hover:font-MonserratExtraBold tracking-tight
-                      font-MonserratRegular text-lg lg:text-2xl px-20 py-4 rounded-3xl shadow-md text-center border-4">
+                      text-gray-800 hover:bg-white hover:text-black hover:font-MonserratExtraBold tracking-tight
+                      font-MonserratRegular text-lg lg:text-2xl px-20 py-4 rounded-3xl shadow-md text-center border-4 border-white">
               Contacto
             </a>
           </div>
