se agrega cambios para mejorar el rendimeinto

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section class="w-full h-screen bg-[#c9ffea] flex flex-col items-center  justify-center rounded-bl-3xl rounded-br-3xl text-center">
         <!-- Contenido principal -->
           <span class="block font-MonserratExtraBold text-gray-800 text-xs sm:text-sm md:text-base lg:text-lg  tracking-wide">¿Necesitas?  </span>
-          <div class="w-full flex flex-row items-center justify-center text-white text-5xl sm:text-4xl md:text-5xl lg:text-7xl xl:text-9xl mt-10">
+          <div class="min-h-[3em] w-full flex flex-row items-center justify-center text-white text-5xl sm:text-4xl md:text-5xl lg:text-7xl xl:text-9xl mt-10">
             <span id="typed" class="font-Boldonse text-center text-black"></span>
           </div>
           <h1 class="w-full font-MonserratRegular text-[0.9em] mt-10 lg:text-[1.2em] text-black text-center p-5 lg:w-[800px]">
