Se corrige medidas de imagenes

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   
         <!-- Logo móvil -->
         <a class="flex lg:hidden" href="/index.html">
-          <img src="./assets/images/logo_negro.webp" width="35px" width="35px" alt="logo KCM Smart">
+          <img src="./assets/images/logo_negro.webp" loading="lazy" width="35px" width="35px" alt="logo KCM Smart">
         </a>
   
         <!-- Logo escritorio -->
         <a class="hidden lg:flex" href="/index.html">
-          <img src="./assets/images/logo_blanco.webp" width="35px" width="35px" alt="logo KCM Smart">
+          <img src="./assets/images/logo_blanco.webp" loading="lazy" width="35px" width="35px" alt="logo KCM Smart">
         </a>
   
         <!-- Menú navegación -->
@@ -52,7 +52,7 @@
       <section class="w-full h-screen bg-[#c9ffea] flex flex-col items-center  justify-center rounded-bl-3xl rounded-br-3xl text-center">
         <!-- Contenido principal -->
           <span class="block font-MonserratExtraBold text-gray-800 text-xs sm:text-sm md:text-base lg:text-lg  tracking-wide">¿Necesitas?  </span>
-          <div class="min-h-[3em] w-full flex flex-row items-center justify-center text-white text-5xl sm:text-4xl md:text-5xl lg:text-7xl xl:text-9xl mt-10">
+          <div class="h-[100px] w-full flex flex-row items-center justify-center text-white text-5xl sm:text-4xl md:text-5xl lg:text-7xl xl:text-9xl lg:h-[220px]">
             <span id="typed" class="font-Boldonse text-center text-black"></span>
           </div>
           <h1 class="w-full font-MonserratRegular text-[0.9em] mt-10 lg:text-[1.2em] text-black text-center p-5 lg:w-[800px]">
@@ -82,7 +82,7 @@
     <!--Sección de Sobre mi-->
     <section id="Sobremi" class="w-full bg-gray-800 flex flex-col-reverse p-5 gap-20 md:lg:px-32 lg:flex-row lg:px-64 lg:py-32  mb-10 lg:mb-0 rounded-bl-3xl rounded-br-3xl">
       <div class="w-full flex justify-center mb-10 lg:mb-5" data-aos="fade-up">
-          <img src="./assets/images/5800.webp" width="498px"  height="498px"  alt="sobre mi" class=" rounded-full object-cover w-[300px] h-[300px] lg:rounded-[64px] lg:h-full lg:w-full">
+          <img src="./assets/images/5800.png" loading="lazy" width="498px"  height="498px"  alt="sobre mi" class=" rounded-full object-cover w-[300px] h-[300px] lg:rounded-[64px] lg:h-full lg:w-full">
 
       </div>
       <div class="w-full flex flex-col text-white text-justify mt-10" data-aos="fade-up">
@@ -332,7 +332,7 @@
           <p class="text-2xl font-Monserrat font-medium text-[#5A5A5A] mt-10 text-center lg:w-lvh">
               "¿Tienes alguna pregunta? ¡No dudes en contactarme!"
           </p>  
-          <img src="./assets/images/preguntas.webp" width="400px" height="400px" alt="Preguntas images">              
+          <img src="./assets/images/preguntas.png" loading="lazy" width="400px" height="400px" alt="Preguntas images">              
       </div>
       <div class=" w-full flex flex-col gap-3 font-Monserrat">
 
