se agrega cambios

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section class="w-full h-screen bg-[#c9ffea] flex flex-col items-center  justify-center rounded-bl-3xl rounded-br-3xl text-center">
         <!-- Contenido principal -->
           <span class="block font-MonserratExtraBold text-gray-800 text-xs sm:text-sm md:text-base lg:text-lg  tracking-wide">¿Necesitas?  </span>
-          <div class="h-[100px] w-full flex flex-row items-center justify-center text-white text-5xl sm:text-4xl md:text-5xl lg:text-7xl xl:text-9xl lg:h-[220px]">
+          <div class="h-[100px] w-full flex flex-row items-center justify-center text-white text-5xl sm:text-5xl md:text-5xl lg:text-7xl xl:text-9xl lg:h-[220px]">
             <span id="typed" class="font-Boldonse text-center text-black"></span>
           </div>
           <h1 class="w-full font-MonserratRegular text-[0.9em] mt-10 lg:text-[1.2em] text-black text-center p-5 lg:w-[800px]">
@@ -326,24 +326,24 @@
 
 
     <!--Sección de Preguntas Frecuentes-->
-    <section class="mt-40 bg-[#c9ffea] flex flex-col lg:flex-row p-5  gap-5 lg:px-32 font-MonserratRegular">
-      <div>
-          <span class="font-extrabold  font-MonserratExtraBold uppercase text-5xl">Preguntas Frecuentes</span>
-          <p class="text-2xl font-Monserrat font-medium text-[#5A5A5A] mt-10 text-center lg:w-lvh">
+    <section class="bg-[#c9ffea] flex flex-col p-5  gap-5 lg:flex-row  lg:px-32 font-MonserratRegular mt-40 ">
+      <div class="w-full flex flex-col items-center justify-center">
+          <span class="font-MonserratExtraBold uppercase text-center text-4xl">Preguntas Frecuentes</span>
+          <p class="text-2xl font-Monserrat font-medium text-[#5A5A5A] mt-10 text-center">
               "¿Tienes alguna pregunta? ¡No dudes en contactarme!"
           </p>  
           <img src="./assets/images/preguntas.png" loading="lazy" width="400px" height="400px" alt="Preguntas images">              
       </div>
-      <div class=" w-full flex flex-col gap-3 font-Monserrat">
+      <div class="w-full flex flex-col gap-3 font-MonserratRegular">
 
 
-          <div class="bg-white rounded-xl shadow p-4" data-aos="fade-up"
+            <div class="w-full bg-white rounded-xl shadow p-4" data-aos="fade-up"
           data-aos-anchor-placement="top-bottom">
               <button onclick="toggleAnswer(1)" class="flex justify-between w-full text-left text-lg font-medium text-gray-800">
                   ¿Cuál es la Modalidad de pago?
                 <span id="icon-1">+</span>
               </button>
-              <div id="answer-1" class="mt-2 text-gray-600 hidden">
+              <div id="answer-1" class="w-full mt-2 text-gray-600 hidden">
                   Una vez firmado el contrato y para iniciar el trabajo Se paga el 50% al iniciar y el 50% restante al finalizar. <br><br>
                   <span class=" mt-5">Transferencia bancaria | Paypal | Yape/Plin</span>
 
@@ -495,7 +495,7 @@
   </section>
     
   </main>
-  <footer class="w-full p-4 font-MonserratExtraBold text-sm font-extrabold bg-gray-800 text-white text-center lg:text-md">
+  <footer class="w-full p-4 font-MonserratExtraBold text-[0.8em] font-extrabold bg-gray-800 text-white text-center lg:text-[1em]">
     <p>© 2025 KCMSMART. Todos los derechos reservados.</p>
 </footer>
 <script src="./assets/js/script.js"></script>
