se agrega cambios

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script rel="preload" src="https://kit.fontawesome.com/8c2f1b82d6.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
     <meta name="theme-color" content="#18F29B" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -56,12 +56,12 @@
           <div class="h-[100px] w-full flex flex-row items-center justify-center text-white text-5xl sm:text-5xl md:text-5xl lg:text-7xl xl:text-9xl lg:h-[220px]">
             <span id="typed" class="font-Boldonse text-center text-black"></span>
           </div>
-          <h1 class="w-full font-MonserratRegular text-[0.9em] mt-10 lg:text-[1.2em] text-black text-center p-5 lg:w-[800px]">
+          <h1 class="w-full font-MonserratRegular text-[1em] mt-10 lg:text-[1.2em] text-black text-center p-5 lg:w-[800px]">
             Transformos tus ideas en experiencias web únicas y personalizadas que destacan en el mundo digital.
           </h1>
       
           <!-- Botones -->
-          <div class="mt-5 w-full flex flex-col md:flex-row lg:flex-row items-center justify-center gap-6">
+          <div class="mt-10 w-full flex flex-col md:flex-row lg:flex-row items-center justify-center gap-6">
             <a href="#Portafolio"
                class="transform transition duration-300 ease-in-out hover:scale-105
                       text-black bg-[#18F29b] hover:bg-white hover:text-black hover:border-white hover:font-MonserratExtraBold tracking-tight
