se agrega cambios

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   
         <!-- Logo móvil -->
         <a class="flex lg:hidden" href="/index.html">
-          <img src="./assets/images/logo_negro.webp" loading="lazy" width="35px" width="35px" alt="logo KCM Smart">
+          <img src="./assets/images/logo_negro.webp" loading="lazy" width="35px" height="35px" alt="logo KCM Smart">
         </a>
   
         <!-- Logo escritorio -->
         <a class="hidden lg:flex" href="/index.html">
-          <img src="./assets/images/logo_blanco.webp" loading="lazy" width="35px" width="35px" alt="logo KCM Smart">
+          <img src="./assets/images/logo_blanco.webp" loading="lazy" width="35px" height="35px" alt="logo KCM Smart">
         </a>
   
         <!-- Menú navegación -->
