se agrega cambios

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <main class="w-full h-full">
 
     <!-- Sección principal -->
-     <div class=" bg-black">
+     <div class="bg-gray-800">
       <section class="w-full h-screen bg-[#c9ffea] flex flex-col items-center  justify-center rounded-bl-3xl rounded-br-3xl text-center">
         <!-- Contenido principal -->
           <span class="block font-MonserratExtraBold text-gray-800 text-xs sm:text-sm md:text-base lg:text-lg  tracking-wide">¿Necesitas?  </span>
@@ -82,9 +82,8 @@
 
     <!--Sección de Sobre mi-->
     <section id="Sobremi" class="w-full bg-gray-800 flex flex-col-reverse p-5 gap-20 md:lg:px-32 lg:flex-row lg:px-64 lg:py-32  mb-10 lg:mb-0 rounded-bl-3xl rounded-br-3xl">
-      <div class="w-full flex justify-center mb-10 lg:mb-5" data-aos="fade-up">
-          <img src="./assets/images/5800.png" loading="lazy" width="498px"  height="498px"  alt="sobre mi" class=" rounded-full object-cover w-[300px] h-[300px] lg:rounded-[64px] lg:h-full lg:w-full">
-
+      <div class="w-full flex justify-center items-center mb-10 lg:mb-5" data-aos="fade-up">
+          <img src="./assets/images/img-kcmSmart.webp" loading="lazy" class="w-[500px] h-[400px]"  alt="sobre mi">
       </div>
       <div class="w-full flex flex-col text-white text-justify mt-10" data-aos="fade-up">
           <span class="font-MonserratExtraBold text-5xl">SOBRE MI</span>
