se agrega cambios

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="h-[100px] w-full flex flex-row items-center justify-center text-white text-5xl sm:text-5xl md:text-5xl lg:text-7xl xl:text-9xl lg:h-[220px]">
             <span id="typed" class="font-Boldonse text-center text-black"></span>
           </div>
-          <h1 class="w-full font-MonserratRegular text-[1em] mt-10 lg:text-[1.2em] text-black text-center p-5 lg:w-[800px]">
+          <h1 class="w-full font-MonserratRegular font-bold text-[1em] mt-10 lg:text-[1.2em] text-black text-center p-5 lg:w-[800px]">
             Transformos tus ideas en experiencias web únicas y personalizadas que destacan en el mundo digital.
           </h1>
       
@@ -137,6 +137,7 @@
             <div class="w-full h-[190px] bg-white flex items-start justify-center flex-col gap-4 px-10 py-5 text-black">
               <div class="flex flex-col gap-1 text-start">
                 <span class="font-CalSans font-bold text-2xl">Landing Page</span>
+                <span class="font-MonserratRegular">Como este sitio</span>
                 <span class="font-MonserratLight text-2xl">7 días habiles</span>
               </div>
               <span class="font-Boldonse text-5xl mt-2">$170.<span class="text-2xl">00</span></span>
@@ -172,6 +173,8 @@
             <div class="w-full h-[190px] bg-white flex items-start justify-center flex-col gap-4 px-10 py-5 text-black">
               <div class="flex flex-col gap-1 text-start">
                 <span class="font-CalSans font-bold text-2xl">Sitio Web</span>
+                <span class="font-MonserratRegular">Empresarial</span>
+
                 <span class="font-MonserratLight font-extralight text-2xl">7 días habiles</span>
               </div>
               <span class="font-Boldonse text-5xl mt-2">$389.<span class="text-2xl">00</span></span>
