se agrega cambios

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
     <!-- Sección principal -->
      <div class="bg-gray-800">
-      <section class="w-full h-screen bg-[#c9ffea] flex flex-col items-center  justify-center rounded-bl-3xl rounded-br-3xl text-center">
+      <section class="w-full h-screen bg-radial from-[#ffffff] from-40% to-[#c9ffea] flex flex-col items-center  justify-center rounded-bl-3xl rounded-br-3xl text-center">
         <!-- Contenido principal -->
           <span class="block font-MonserratExtraBold text-gray-800 text-xs sm:text-sm md:text-base lg:text-lg  tracking-wide">¿Necesitas?  </span>
           <div class="h-[100px] w-full flex flex-row items-center justify-center text-white text-5xl sm:text-5xl md:text-5xl lg:text-7xl xl:text-9xl lg:h-[220px]">
             <span id="typed" class="font-Boldonse text-center text-black"></span>
           </div>
-          <h1 class="w-full font-MonserratRegular font-bold text-[1em] mt-10 lg:text-[1.2em] text-black text-center p-5 lg:w-[800px]">
+          <h1 class="w-full font-MonserratRegular font-bold text-[1.2em] mt-10  text-black text-center p-5 lg:w-[800px]">
             Transformos tus ideas en experiencias web únicas y personalizadas que destacan en el mundo digital.
           </h1>
       
@@ -83,7 +83,7 @@
     <!--Sección de Sobre mi-->
     <section id="Sobremi" class="w-full bg-gray-800 flex flex-col-reverse p-5 gap-20 md:lg:px-32 lg:flex-row lg:px-64 lg:py-32  mb-10 lg:mb-0 rounded-bl-3xl rounded-br-3xl">
       <div class="w-full flex justify-center items-center mb-10 lg:mb-5" data-aos="fade-up">
-          <img src="./assets/images/img-kcmSmart.webp" loading="lazy" class="w-[500px] h-[400px]"  alt="sobre mi">
+          <img src="./assets/images/img-kcmSmart.webp" loading="lazy" class="w-[500px] h-[350px]"  alt="sobre mi">
       </div>
       <div class="w-full flex flex-col text-white text-justify mt-10" data-aos="fade-up">
           <span class="font-MonserratExtraBold text-5xl">SOBRE MI</span>
