--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
-    <meta name="theme-color" content="#18F29B" />
+    <meta name="theme-color" content="#c9ffea" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="description" content="En KCM Smart creamos sitios web modernos, funcionales y personalizados para hacer crecer tu marca. Especialistas en landing pages, e-commerce y diseño web profesional. ¡Impulsa tu negocio hoy!">
